<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="AirParametersFB" Id="{3c103a82-3459-4cea-9958-e638d218fab8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK AirParametersFB
VAR_IN_OUT
	Parameters: GreenMasterBaseParameters;
	ParametersFB: GreenMasterBaseParametersFB;
	AirParameters: AirParameters;
END_VAR
VAR_INPUT
END_VAR
VAR_OUTPUT
	SetPointAdjustmentFB: SetPointAdjustmentFB;
	TestOutput: LREAL := 3.14;
END_VAR
VAR
	LastControlMode: FanControlTypes;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF AirParameters.ControlMode <> LastControlMode THEN
	CASE AirParameters.ControlMode OF
		FanControlTypes.Pressure:
			AirParameters.Control := AirParameters.Defaults.Pressure;
		FanControlTypes.Flow:
			AirParameters.Control := AirParameters.Defaults.Flow;
		FanControlTypes.Const:
			AirParameters.Control := AirParameters.Defaults.Const;
		FanControlTypes.SlaveFlow:
			AirParameters.Control := AirParameters.Defaults.SlaveFlow;
	END_CASE
	LastControlMode := AirParameters.ControlMode;
ELSE
	CASE AirParameters.ControlMode OF
		FanControlTypes.Pressure:
			AirParameters.Defaults.Pressure := AirParameters.Control;
		FanControlTypes.Flow:
			AirParameters.Defaults.Flow := AirParameters.Control;
		FanControlTypes.Const:
			AirParameters.Defaults.Const := AirParameters.Control;
		FanControlTypes.SlaveFlow:
			AirParameters.Defaults.SlaveFlow := AirParameters.Control;
	END_CASE	
END_IF
SetPointAdjustmentFB(X := Parameters.Regulation.CompensationTemperature, SetPointAdjustment := AirParameters.SetPointAdjustment);
AirParameters.Control.CSP := (AirParameters.Control.SP + SetPointAdjustmentFB.Y) * AirParameters.AdjustCSP;
IF AirParameters.Flow <> 0 THEN
	AirParameters.SpecificFanPower := AirParameters.Power / AirParameters.Flow;	
ELSE
	AirParameters.SpecificFanPower := 0;
END_IF
IF AirParameters.PressureRise <> 0 THEN
	AirParameters.FanEfficiency := AirParameters.SpecificFanPower / (AirParameters.PressureRise / 1000.0);
ELSE
	AirParameters.FanEfficiency := 0;
END_IF
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>